# oco

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cli.mjs  oco-overview.html  oco.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.agents/skills/oco-inspect-repo-area/: SKILL.md
.agents/skills/oco-investigate-bug/: SKILL.md
.agents/skills/oco-trace-stack/: SKILL.md
.claude/: README.md  settings.json
.claude/hooks/: post-tool-use.mjs  pre-tool-use.mjs  stop.mjs  user-prompt-submit.cjs  user-prompt-submit.mjs
.claude/hooks/lib/: utils.mjs
.claude/hooks/scripts/: post-tool-use.sh  pre-tool-use.sh  stop.sh
.claude/managed-settings.d/: 50-oco.json
.claude/mcp/: bridge.cjs  bridge.js
.claude/skills/oco/: SKILL.md
.claude/skills/oco-safe-refactor/: SKILL.md
.claude/skills/oco-trace-stack/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
apps/dashboard/src/: App.svelte  app.css
apps/dev-cli/: Cargo.toml
apps/dev-cli/src/: main.rs
apps/dev-cli/src/ui/: event.rs  jsonl.rs  mod.rs  quiet.rs  terminal.rs
apps/vscode-extension/: biome.json  package.json
apps/vscode-extension/src/: client.ts  extension.ts  trace-panel.ts
crates/architecture-tests/: Cargo.toml
crates/architecture-tests/src/: lib.rs
crates/architecture-tests/tests/: crate_dependencies.rs
crates/claude-adapter/: Cargo.toml
crates/claude-adapter/src/: detection.rs  error.rs  events.rs  lib.rs  negotiation.rs
crates/code-intel/: Cargo.toml
crates/code-intel/src/: composite_parser.rs  error.rs  indexer.rs  languages.rs  lib.rs  parser.rs  symbols.rs  ts_parser.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: assembler.rs  builder.rs  compressor.rs  dedup.rs  estimator.rs  lib.rs  step_scope.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: dashboard.rs  handlers.rs  hooks.rs  lib.rs  protocol.rs  router.rs  server.rs  session_manager.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: agent_teams.rs  config.rs  error.rs  eval.rs  graph_runner.rs  lib.rs  llm.rs  llm_router.rs  loop_runner.rs  ml_client.rs  replay.rs  review_packet.rs  runtime.rs  scorecard.rs  state.rs
crates/orchestrator-core/tests/: integration_test.rs
crates/planner/: Cargo.toml
crates/planner/src/: context.rs  direct.rs  error.rs  lib.rs  llm_planner.rs  prior_art.rs  prompt.rs  risk_analysis.rs
crates/policy-engine/: Cargo.toml
crates/policy-engine/src/: budget.rs  classifier.rs  gates.rs  knowledge.rs  lib.rs  scheduler.rs  secret_scanner.rs  selector.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: call_graph.rs  error.rs  fts.rs  hybrid.rs  lib.rs  vector.rs
crates/shared-proto/: Cargo.toml  build.rs
crates/shared-proto/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: action.rs  affordance.rs  agent.rs  budget.rs  capability.rs  context.rs  counterfactual.rs  dashboard.rs  elicitation.rs  gate.rs  lease.rs  lib.rs  memory.rs  mission.rs  observation.rs  plan.rs  profile.rs  protocol.rs  replay.rs  review_packet.rs  scorecard.rs  session.rs  team.rs  telemetry.rs  tool.rs  verification.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: init.rs  lib.rs  metrics.rs  proof_chain.rs  traces.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: error.rs  executor.rs  lib.rs  normalizer.rs  registry.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: dispatcher.rs  error.rs  lib.rs  runner.rs
crates/verifier/src/runners/: build_runner.rs  lint_runner.rs  mod.rs  test_runner.rs  typecheck_runner.rs
crates/verifier/tests/: tiered_e2e.rs
docs/adr/: 001-stack-selection.md  002-orchestration-model.md  003-context-assembly.md  004-verification-integrity.md  005-working-memory.md  006-repo-profiles.md  007-hooks-runtime-validation.md  008-hierarchical-execution-plans.md  009-session-continuity-model.md  010-mission-memory-model.md  011-evaluation-scorecard-model.md  012-evaluation-gate-model.md  013-repo-gate-config.md  014-baseline-lifecycle-review-artifacts.md  015-review-packet-model.md  016-baseline-promotion-audit-trail.md
docs/architecture/: overview.md
docs/specs/: emergent-orchestration-ux-plan.md  problem-statement.md  v2-architecture.md  v2-evaluation.md  v2-working-memory.md
examples/: baseline-v0.5.json  benchmark-v0.5.jsonl  ci-baseline-promote.sh  ci-eval-gate.sh  ci-review-pack.sh  eval-scenarios.jsonl  mission-handoff-demo.md  oco.toml  q5-eval-scenarios.jsonl
examples/sample-repo-small/src/: auth.rs  cache.rs  main.rs
examples/sample-traces/: code-navigation.json
oco-plugin/: .mcp.json  ACCEPTANCE.md  DEFERRED.md
oco-plugin/.claude/: settings.json
oco-plugin/.claude-plugin/: plugin.json
oco-plugin/agents/: codebase-investigator.md  refactor-reviewer.md
oco-plugin/docs/: ARCHITECTURE.md  MIGRATION.md  README.md
oco-plugin/hooks/: hooks.json
oco-plugin/hooks/scripts/: post-tool-use.sh  (+3 more)
oco-plugin/scripts/: channel-server.mjs  post-tool-use.mjs  sdk-runner.mjs
plugin/: settings-fragment.json
plugin/dashboard/: index.html
plugin/hooks/: post-tool-use.mjs  pre-tool-use.mjs  stop.mjs  user-prompt-submit.cjs
plugin/mcp/: bridge.cjs  bridge.js
py/eval-harness/: pyproject.toml
py/eval-harness/src/eval_harness/: __init__.py  runner.py  scenario.py
py/ml-worker/: pyproject.toml
py/ml-worker/src/ml_worker/: __init__.py  config.py  embedder.py  reranker.py  server.py
py/ml-worker/tests/: test_embedder.py  test_reranker.py
schemas/jsonschema/: config.schema.json
schemas/proto/: oco.proto  orchestrator.proto
scripts/: inject-demo.sh  release.sh
scripts/bootstrap/: setup.sh
scripts/ci/: check-versions.sh  check.sh
scripts/dev/: run-ml-worker.sh  run-server.sh
tests/: benchmark-orchestration.md  benchmark-prompt.md  benchmark-stress.md  plugin-cli.test.mjs
(+126 files in other folders)
