[package]
name = "oco-code-intel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Code intelligence via Tree-sitter parsing and symbol extraction"

[dependencies]
oco-shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
