[package]
name = "oco-context-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Context assembly, compression, and token budget management"

[dependencies]
oco-shared-types = { workspace = true }
oco-retrieval = { workspace = true }
oco-code-intel = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
