[package]
name = "oco-mcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) server exposing OCO tools and resources"

[dependencies]
oco-shared-types = { workspace = true }
oco-orchestrator-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
