[package]
name = "oco-orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestration state machine and action loop"

[dependencies]
oco-shared-types = { workspace = true }
oco-policy-engine = { workspace = true }
oco-context-engine = { workspace = true }
oco-tool-runtime = { workspace = true }
oco-retrieval = { workspace = true }
oco-verifier = { workspace = true }
oco-planner = { workspace = true }
oco-telemetry = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
oco-code-intel = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
