[package]
name = "oco-policy-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Budget enforcement, action selection, and policy rules"

[dependencies]
oco-shared-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
