[package]
name = "oco-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured telemetry, decision traces, and OpenTelemetry export"

[dependencies]
oco-shared-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
