[package]
name = "oco-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Verification runners for tests, builds, lints, and type checks"

[dependencies]
oco-shared-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
