[project]
name = "oco-eval-harness"
version = "0.1.0"
description = "Evaluation harness for testing OCO orchestration quality"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100
